--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
       <link href="style.css" rel="stylesheet" />
       <title>/ E.HL </title>
+      <meta name="keywords" content="Elisa Honorato, Elisa, Diseño">
       <link rel="shortcut icon" href="images/automarca03.png">
    </head>
    <body>
@@ -15,7 +16,7 @@
       </nav>
       <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
          <div class="container">
-            <a href="index.html"> <img src="images/automarca2.png" width="auto" height="30"> </a> 
+            <a href="#hello"> <img src="images/automarca2.png" width="auto" height="30"> </a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
