--- a/index.html
+++ b/index.html
@@ -55,16 +55,19 @@
             </div>
          </section>
          <section id="work">
-            <header class="d-flex align-content-center justify-content-center">
-               <div class="my-auto">
-                  <div class="text-center">
-                     <h2 class="display-1 text-white">work</h2>
-                  </div>
-               </div>
-            </header>
-            <div class="container">
-               <div class="row mt-5 mb-4 g-4" data-masonry='{"percentPosition": true }' id="portfolio"></div>
-            </div>
+           <ul>
+              <li class="list active" data-filter="all">Todos</li>
+              <li class="list" data-filter="graphic">Diseño Gráfico</li>
+              <li class="list" data-filter="web">Web</li>
+              <li class="list" data-filter="illustration">Ilustración</li>
+              <li class="list" data-filter="animation">Animación</li>
+           </ul>
+           <div class="product">
+              <div class="itemBox" data-item="graphic"><img src="images/graphic1.jpg"></div>
+              <div class="itemBox" data-item="graphic"><img src="images/graphic2.jpg"></div>
+              <div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg"></div>
+              <div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg"></div>
+           </div>
          </section>
          <section id="contact">
             <header class="d-flex align-content-center justify-content-center">
