--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
               <div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg"></div>
               <div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg"></div>
            </div>
+           <script>
+              let list= document.querySelectorAll('.list');
+              let itemBox= document.querySelectorAll('.itemBox');
+
+              for(let i= 0;i<list.length; i++){
+               list[i].addEventListener('clic',function())
+              }
+           </script>
          </section>
          <section id="contact">
             <header class="d-flex align-content-center justify-content-center">
