--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Diseño y nuevos medios, segunda versión remota" />
       <script src="/path/to/masonry.pkgd.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
+      <script type="text/javascript"></script>
+        <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
+      <script type="text/javascript">
+         $(document).ready(function(){
+            $("section#hello header,section#contact header").ripples();
+         })
+      </script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
       <link href="style.css" rel="stylesheet" />
       <title>/ E.HL </title>
@@ -31,7 +42,7 @@
                   <li class="nav-item">
                      <a class="nav-link" href="#contact">contact</a>
                   </li>
-               </ul>
+               </ul >
             </div>
          </div>
       </nav>
@@ -55,19 +66,19 @@
             </div>
          </section>
          <section id="work">
-           <ul>
-              <li class="list active" data-filter="all">Todos</li>
-              <li class="list" data-filter="graphic">Diseño Gráfico</li>
-              <li class="list" data-filter="web">Web</li>
-              <li class="list" data-filter="illustration">Ilustración</li>
-              <li class="list" data-filter="animation">Animación</li>
-           </ul>
-           <div class="product">
-              <div class="itemBox" data-item="graphic"><img src="images/graphic1.jpg"></div>
-              <div class="itemBox" data-item="graphic"><img src="images/graphic2.jpg"></div>
-              <div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg"></div>
-              <div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg"></div>
-           </div>
+            <ul>
+               <li class="list active" data-filter="all">Todos</li>
+               <li class="list" data-filter="graphic">Diseño Gráfico</li>
+               <li class="list" data-filter="web">Web</li>
+               <li class="list" data-filter="illustration">Ilustración</li>
+               <li class="list" data-filter="animation">Animación</li>
+            </ul>
+            <div class="product" id="projects">
+               <!-- <a href="proyecto.html?nro=1"><div class="itemBox" data-item="graphic"><img src="images/graphic1.jpg" ></div></a>
+               <div class="itemBox" data-item="graphic"><img src="images/graphic2.jpg"></div>
+               <div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg"></div>
+               <div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg"></div> -->
+            </div>
          </section>
          <section id="contact">
             <header class="d-flex align-content-center justify-content-center">
@@ -135,5 +146,8 @@
       <script src="script.js"></script>
       <script src="https://deelay.me/1000/https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
       <script src="/path/to/masonry.pkgd.min.js"></script>
+      <script src="jquery.ripples.js"></script>
+    
+
    </body>
 </html>
