--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
    <head>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="description" content="Diseño y nuevos medios, segunda versión remota" />
-      <script src="/path/to/masonry.pkgd.min.js"></script>
+      <meta name="description" content="Portafolio Elisa Honorato Lira" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
       <script type="text/javascript"></script>
         <script
@@ -13,7 +12,7 @@
   crossorigin="anonymous"></script>
       <script type="text/javascript">
          $(document).ready(function(){
-            $("section#hello header,section#contact header").ripples();
+            $("section#contact header").ripples();
          })
       </script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
@@ -74,10 +73,10 @@
                <li class="list" data-filter="animation">Animación</li>
             </ul>
             <div class="product" id="projects">
-               <!-- <a href="proyecto.html?nro=1"><div class="itemBox" data-item="graphic"><img src="images/graphic1.jpg" ></div></a>
-               <div class="itemBox" data-item="graphic"><img src="images/graphic2.jpg"></div>
-               <div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg"></div>
-               <div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg"></div> -->
+               <a href="proyecto.html?nro=1"><div class="itemBox" data-item="graphic"><img src="images/graphic1.jpg" onmousemove="transition()" onmouseleave="nada()" ></div></a>
+                 <a href="proyecto.html?nro=2"><div class="itemBox" data-item="graphic"><img src="images/graphic2.jpg" onmousemove="transition()" onmouseleave="nada()"></div></a>
+                 <a href="proyecto.html?nro=3"><div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg" onmousemove="transition()" onmouseleave="nada()"></div></a>
+                 <a href="proyecto.html?nro=4"><div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg" onmousemove="transition()" onmouseleave="nada()"></div></a>
             </div>
          </section>
          <section id="contact">
@@ -144,8 +143,6 @@
       </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
       <script src="script.js"></script>
-      <script src="https://deelay.me/1000/https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
-      <script src="/path/to/masonry.pkgd.min.js"></script>
       <script src="jquery.ripples.js"></script>
     
 
