--- a/proyecto.html
+++ b/proyecto.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Diseño y nuevos medios, segunda versión remota" />
-        <title>EVALUACIÓN Nº2 &#127909;</title>
-        <link rel="stylesheet" href="style.css" />
-        <script
-            src="https://code.jquery.com/jquery-3.6.0.js"
-            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-            crossorigin="anonymous">
-        </script>
-    </head>
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="description" content="Portafolio Elisa Honorato Lira" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
+      <link href="style.css" rel="stylesheet" />
+      <title>/ E.HL </title>
+      <meta name="keywords" content="Elisa Honorato, Elisa, Diseño">
+      <link rel="shortcut icon" href="images/automarca03.png">
+   </head>
       <body>
-        <div class="container2">
-            <nav>
-                <p><a href="index.html">Portada</a> <a href="peliculas.html">Películas</a> <a href="locaciones.html">Locaciones</a> <a href="ganancias.html">Ganancias</a></p>
-            </nav>
+        <nav class="bg-light border-bottom" id="secundario">
+      </nav>
+      <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
+         <div class="container">
+            <a href="#hello"> <img src="images/automarca2.png" width="auto" height="30"> </a> 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+               <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                  <li class="nav-item">
+                     <a class="nav-link" href="#hello">home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#work">work</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#contact">contact</a>
+                  </li>
+               </ul >
+            </div>
+         </div>
+      </nav>
             <main>
                 <section id='proyectos'>
                     <!--acá se meten las películas-->
                 </section>
             </main>
-            <footer>
-                <p><a href="https://github.com/elisahonorato">Elisa Honorato</a> <a href="https://github.com/profesorfaco/dno037-2021">DNO037</a></p>
-            </footer>
-        </div>
     </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
     <script src="proyecto.js"></script>
