--- a/proyecto.html
+++ b/proyecto.html
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                   <li class="nav-item">
-                     <a class="nav-link" href="#hello">home</a>
+                     <a class="nav-link" href="index.html#hello">home</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#work">work</a>
+                     <a class="nav-link" href="index.html#work">work</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#contact">contact</a>
+                     <a class="nav-link" href="index.html#contact">contact</a>
                   </li>
                </ul >
             </div>
