--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
       <script type="text/javascript">
-         $(document).mouseover(function(){
+         $(document).ready(function(){
             $("section#contact header").ripples();
-            $("section#contact header").mouseleave(nada);
          })
       </script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
