--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <header class="d-flex align-content-center justify-content-center">
                <div class="my-auto">
                   <div class="text-center">
-                     <h2 class="display-1 text-white">contact</h2>
+                     <h2 class="display-1 text-dark">contact</h2>
                   </div>
                </div>
             </header>
