--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                  <a href="proyecto.html?nro=1"><div class="itemBox" data-item="graphic"><img src="images/graphic2.jpg" onmousemove="transition()" onmouseleave="nada()"></div></a>
                  <a href="proyecto.html?nro=2"><div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg" onmousemove="transition()" onmouseleave="nada()"></div></a>
                  <a href="proyecto.html?nro=3"><div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg" onmousemove="transition()" onmouseleave="nada()"></div></a>
+                 <a href="proyecto.html?nro=4"><div class="itemBox" data-item="graphic"><img src="images/graphic4.jpg" onmousemove="transition()" onmouseleave="nada()"></div></a>
             </div>
          </section>
          <section id="contact">
