--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                   <div class="text-center">
                      <h2 class="display-1 text-white"></h2>
                   </div>
-               </div>
+                   </div>
             </header>
+            <video src="images/elisa.mp4" muted loop autoplay> 
+            </video>
             <div class="container">
                <div class="row py-4 py-md-5">
                   <div class="col-12 col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
