--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   </div>
                    </div>
             </header>
-            <video poster="images/elisa.png" preload="none" src="images/elisa.mp4" muted loop autoplay> 
+            <video alt="video" poster="images/elisa.png" preload="none" src="images/elisa.mp4" muted loop autoplay> 
             </video>
             <div class="container">
                <div class="row py-4 py-md-5">
