--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </nav>
       <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
          <div class="container">
-            <a href="#hello"> <img src="images/automarca2.png" width="auto" height="30"> </a> 
+            <a href="#hello"> <img src="images/logo.png" alt="logo" width="auto" height="30"> </a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
