--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
   src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
-      <script type="text/javascript">
-         $(document).ready(function(){
-            $("section#contact header").ripples();
-         })
-      </script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
       <link href="style.css" rel="stylesheet" />
       <title>/ E.HL </title>
@@ -74,13 +69,7 @@
                <li class="list" data-filter="illustration">Ilustración</li>
                <li class="list" data-filter="animation">Animación</li>
             </ul>
-            <div class="product" id="projects">
-               <a href="proyecto.html?nro=0"><div class="itemBox" data-item="graphic"><img src="images/graphic1.jpg" alt="Gráfico" onmousemove="transition()" onmouseleave="nada()" ></div></a>
-                 <a href="proyecto.html?nro=1"><div class="itemBox" data-item="graphic"><img src="images/graphic2.jpg" alt="Gráfico" onmousemove="transition()" onmouseleave="nada()"></div></a>
-                 <a href="proyecto.html?nro=2"><div class="itemBox" data-item="graphic"><img src="images/graphic3.jpg" alt="Gráfico" onmousemove="transition()" onmouseleave="nada()"></div></a>
-                 <a href="proyecto.html?nro=3"><div class="itemBox" data-item="illustration"><img src="images/illustration1.jpg" alt="Gráfico" onmousemove="transition()" onmouseleave="nada()"></div></a>
-                 <a href="proyecto.html?nro=4"><div class="itemBox" data-item="graphic"><img src="images/graphic4.jpg" alt="Gráfico" onmousemove="transition()" onmouseleave="nada()"></div></a>
-            </div>
+            <div class="product" id="projects" />
          </section>
          <section id="contact">
             <header class="d-flex align-content-center justify-content-center">
@@ -147,7 +136,11 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
       <script src="script.js"></script>
       <script src="jquery.ripples.js"></script>
-    
+      <script type="text/javascript">
+         $(document).ready(function(){
+            $("section#contact header").ripples();
+         })
+      </script>
 
    </body>
 </html>
