--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <link href="style.css" rel="stylesheet" />
       <title>/ E.HL </title>
       <meta name="keywords" content="Elisa Honorato, Elisa, Diseño">
-      <link rel="shortcut icon" href="images/automarca03.png">
+      <link rel="shortcut icon" href="images/automarca/automarca03.png">
    </head>
    <body>
       <nav class="bg-light border-bottom" id="secundario">
       </nav>
       <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
          <div class="container">
-            <a href="#hello"> <img src="images/logo.png" alt="logo" width="auto" height="30"> </a> 
+            <a href="#hello"> <img src="images/automarca/logo.png" alt="logo" width="auto" height="30"> </a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
