--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Portafolio Elisa Honorato Lira" />
+      <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC">
+      <meta property="og:url" content="https://www.elisahonoratolira.cl">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
       <script type="text/javascript"></script>
-        <script
-  src="https://code.jquery.com/jquery-3.6.0.js"
+        <script src="https://code.jquery.com/jquery-3.6.0.js"
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
       <link href="style.css" rel="stylesheet" />
       <title>/ E.HL </title>
-      <meta name="keywords" content="Elisa Honorato, Elisa, Diseño">
       <link rel="shortcut icon" href="automarca/automarca03.png">
    </head>
    <body>
