--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       <link href="style.css" rel="stylesheet" />
       <title>/ E.HL </title>
       <link rel="shortcut icon" href="automarca/automarca03.png">
+      <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+   })(window,document,'script','dataLayer','GTM-M5ZW3BT');</script>
+   <!-- End Google Tag Manager -->
    </head>
    <body>
       <nav class="bg-light border-bottom" id="secundario">
@@ -141,6 +148,9 @@
             $("section#contact header").ripples();
          })
       </script>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5ZW3BT"
+   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+   <!-- End Google Tag Manager (noscript) -->
    </body>
 </html>
