--- a/index.html
+++ b/index.html
@@ -149,8 +149,15 @@
          })
       </script>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M5ZW3BT"
-   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VV2G6WQHZL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){window.dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VV2G6WQHZL');
+</script>
    <!-- End Google Tag Manager (noscript) -->
    </body>
 </html>
