--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-      <link href="style.css" rel="stylesheet" />
+      <link href="assets/css/style.css" rel="stylesheet" />
       <title>/ E.HL </title>
-      <link rel="shortcut icon" href="automarca/automarca03.png">
+      <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
       <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -28,7 +28,7 @@
       </nav>
       <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
          <div class="container">
-            <a href="#hello"> <img src="automarca/logo.png" alt="logo" width="auto" height="30"> </a> 
+            <a href="#hello"> <img src="assets/images/automarca/logo.png" alt="logo" width="auto" height="30"> </a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
