--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
          </section>
       </main>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-      <script src="script.js"></script>
-      <script src="jquery.ripples.js"></script>
+      <script src="assets/js/script.js"></script>
+      <script src="assets/js/jquery.ripples.js"></script>
       <script type="text/javascript">
          $(document).ready(function(){
             $("section#contact header").ripples();
