--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   </div>
                    </div>
             </header>
-            <video alt="video" poster="images/elisa.png" preload="none" src="images/elisa.mp4" muted loop autoplay> 
+            <video alt="video" poster="assets/images/elisa.png" preload="none" src="assets/images/elisa.mp4" muted loop autoplay> 
             </video>
             <div class="container">
                <div class="row py-4 py-md-5">
