--- a/proyecto.html
+++ b/proyecto.html
@@ -10,14 +10,14 @@
       <link href="style.css" rel="stylesheet" />
       <title>/ E.HL </title>
       <meta name="keywords" content="Elisa Honorato, Elisa, Diseño">
-      <link rel="shortcut icon" href="automarca/automarca03.png">
+      <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
    </head>
       <body>
         <nav class="bg-light border-bottom" id="secundario">
       </nav>
       <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
          <div class="container">
-            <a href="index.html#hello"> <img src="automarca/logo.png" alt="logo" width="auto" height="30"> </a> 
+            <a href="index.html#hello"> <img src="assets/images/automarca/logo.png" alt="logo" width="auto" height="30"> </a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,7 +48,7 @@
     </body>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
         <script>
-            Papa.parse("https://raw.githubusercontent.com/elisahonorato/pagweb/main/pag%20web.xlsx%20-%20Hoja%201.csv", {
+           Papa.parse('https://raw.githubusercontent.com/elisahonorato/pagweb/main/assets/csv/pag%20web.xlsx%20-%20Hoja%201.csv', {
                 download: true,
                 header: true,
                 dynamicTyping: true,
