--- a/proyecto.html
+++ b/proyecto.html
@@ -7,7 +7,7 @@
       <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC">
       <meta property="og:url" content="https://www.elisahonoratolira.cl">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-      <link href="style.css" rel="stylesheet" />
+      <link href="assets/css/style.css" rel="stylesheet" />
       <title>/ E.HL </title>
       <meta name="keywords" content="Elisa Honorato, Elisa, Diseño">
       <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
