--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
    <head>
       <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="copyright" content="Elisa Honorato" />
       <meta name="description" content="Portafolio Elisa Honorato Lira" />
       <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Diseño Web">
       <meta property="og:url" content="https://www.elisahonoratolira.cl">
+      
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
       <script type="text/javascript"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js"
