--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="copyright" content="Elisa Honorato" />
       <meta name="description" content="Portafolio Elisa Honorato Lira" />
       <meta name="description" content="Elisa Honorato, estudiante de diseño UC.">
-      <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile">
+      <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design">
       <meta property="og:url" content="https://www.elisahonoratolira.cl">
       
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA==" crossorigin="anonymous"></script>
