--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   crossorigin="anonymous"></script>
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
       <link href="assets/css/style.css" rel="stylesheet" />
-      <title>/ E.HL </title>
+      <title>Elisa Honorato </title>
       <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
       <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
