--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="copyright" content="Elisa Honorato"/>
-   <meta name="description" content="Portafolio Elisa Honorato Lira"/>
+   <meta name="description" content="Portafolio Elisa Honorato"/>
    <meta name="description" content="Elisa Honorato, estudiante de diseño UC.">
    <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Elisa Horonato, Elisa Honorto, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design">
    <meta property="og:url" content="https://www.elisahonoratolira.cl">
