--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
       crossorigin="anonymous"></script>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-   <link href="assets/css/style.css" rel="stylesheet" />
+
+   <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="assets/css/custom.css">
+<link href="assets/css/style.css" rel="stylesheet"/>
    <title>Elisa Honorato</title>
    <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
+
    <!-- Google Tag Manager -->
    <script>
       (function (w, d, s, l, i) {
