--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link href="assets/css/style.css" rel="stylesheet"/>
    <title>Elisa Honorato</title>
    <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
-
+   Access-Control-Allow-Origin: https://elisahonoratolira.cl
    <!-- Google Tag Manager -->
    <script>
       (function (w, d, s, l, i) {
