--- a/proyecto.html
+++ b/proyecto.html
@@ -11,6 +11,7 @@
       <title>Elisa Honorato</title>
       <meta name="keywords" content="Elisa Honorato, Elisa, Diseño">
       <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
+      Access-Control-Allow-Origin: https://elisahonoratolira.cl
    </head>
       <body>
         <nav class="bg-light border-bottom" id="secundario">
