--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         </svg>
                         <strong>E-Mail</strong>
                      </span>
-                     <a href="mailto: elisahonoratolira@uc.cl" target="_blank">elisahonoratolira@uc.cl</a>
+                     <a href="mailto: elisahonoratolira@uc.cl" target="_blank" rel="noopener">elisahonoratolira@uc.cl</a>
                   </address>
                   <address class="d-flex justify-content-between align-items-center border-bottom border-dark">
                      <span>
@@ -137,7 +137,7 @@
                         </svg>
                         <strong>Behance</strong>
                      </span>
-                     <a href="https://www.behance.net/elisahonor1cc1" target="_blank">Elisa Honorato</a>
+                     <a href="https://www.behance.net/elisahonor1cc1" target="_blank" rel="noopener">Elisa Honorato</a>
                   </address>
                   <address class="d-flex justify-content-between align-items-center border-bottom border-dark">
                      <span>
@@ -149,7 +149,7 @@
                         </svg>
                         <strong>GitHub</strong>
                      </span>
-                     <a href="https://github.com/elisahonorato" target="_blank">elisahonorato</a>
+                     <a href="https://github.com/elisahonorato" target="_blank" rel="noopener">elisahonorato</a>
                   </address>
                   <address class="d-flex justify-content-between align-items-center border-bottom border-dark">
                      <span>
@@ -162,7 +162,7 @@
                         </svg>
                         <strong>Linkedin</strong>
                      </span>
-                     <a href="https://www.linkedin.com/in/elisa-honorato-962133149/" target="_blank">Elisa Honorato</a>
+                     <a href="https://www.linkedin.com/in/elisa-honorato-962133149/" target="_blank" rel="noopener">Elisa Honorato</a>
                   </address>
                </div>
             </div>
