--- a/proyecto.html
+++ b/proyecto.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
    <head>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1"/>
-      <meta name="description" content="Portafolio Elisa Honorato Lira"/>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="description" content="Portafolio Elisa Honorato Lira">
       <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Horonato, Elisa Honorto">
       <meta property="og:url" content="https://www.elisahonoratolira.cl">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
