--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="description" content="Portafolio Elisa Honorato">
    <meta name="description" content="Elisa Honorato, estudiante de diseño UC.">
-   <meta name="keywords" content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Elisa Horonato, Elisa Honorto, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design">
+   <meta name="keywords"
+      content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Elisa Horonato, Elisa Honorto, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design">
    <meta property="og:url" content="https://www.elisahonoratolira.cl">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"
       integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA=="
@@ -16,7 +17,7 @@
       crossorigin="anonymous"></script>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-<link href="assets/css/style.css" rel="stylesheet"/>
+   <link href="assets/css/style.css" rel="stylesheet" />
    <title>Elisa Honorato</title>
    <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
    <!-- Google Tag Manager -->
@@ -123,7 +124,8 @@
                         </svg>
                         <strong>E-Mail</strong>
                      </span>
-                     <a href="mailto: elisahonoratolira@uc.cl" target="_blank" rel="noopener">elisahonoratolira@uc.cl</a>
+                     <a href="mailto: elisahonoratolira@uc.cl" target="_blank"
+                        rel="noopener">elisahonoratolira@uc.cl</a>
                   </address>
                   <address class="d-flex justify-content-between align-items-center border-bottom border-dark">
                      <span>
@@ -160,7 +162,8 @@
                         </svg>
                         <strong>Linkedin</strong>
                      </span>
-                     <a href="https://www.linkedin.com/in/elisa-honorato-962133149/" target="_blank" rel="noopener">Elisa Honorato</a>
+                     <a href="https://www.linkedin.com/in/elisa-honorato-962133149/" target="_blank"
+                        rel="noopener">Elisa Honorato</a>
                   </address>
                </div>
             </div>
