--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <div class="row py-4 py-md-5">
                <div class="col-12 col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto">
                   <p class="lead">
-                     Hi, my name is Elisa Honorato, and I am a integral design student at Pontificia Universidad
-                     Católica (Santiago, Chile). With a passion for well-crafted (digital) experiences, I believe in
+                     Hi, my name is Elisa Honorato, and I am a integral design student at  <a href="https://diseno.uc.cl/" target="_blank" rel="noopener">Pontificia Universidad
+                        Católica de Chile.</a> With a passion for well-crafted (digital) experiences, I believe in
                      innovation to empower ideas.
                   </p>
                </div>
