--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
    <link href="assets/css/style.css" rel="stylesheet" />
    <title>Elisa Honorato</title>
-   <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
+   <link rel="shortcut icon" href="https://github.com/elisahonorato/pagweb/blob/main/assets/images/automarca/automarca03.png">
    <!-- Google Tag Manager -->
    <script>
       (function (w, d, s, l, i) {
@@ -45,7 +45,7 @@
    </nav>
    <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
       <div class="container">
-         <a href="#hello"> <img src="assets/images/automarca/logo.png"
+         <a href="#hello"> <img src="https://github.com/elisahonorato/pagweb/blob/main/assets/images/automarca/logo.png"
                alt="logo, Personal brand Logo, Letters E/HL on gray background, Geay rounded logo" width="auto"
                height="30"> </a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -76,7 +76,7 @@
                </div>
             </div>
          </header>
-         <video alt="video" poster="assets/images/elisa.png" preload="none" src="assets/images/elisa.mp4" muted loop
+         <video alt="video" poster="https://github.com/elisahonorato/pagweb/blob/main/assets/images/elisa.png" preload="none" src="https://github.com/elisahonorato/pagweb/blob/main/assets/images/elisa.mp4" muted loop
             autoplay>
          </video>
          <div class="container">
