--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
       <div class="container">
          <a href="#hello"> <img src="https://github.com/elisahonorato/pagweb/blob/main/assets/images/automarca/logo.png"
-               alt="logo, Personal brand Logo, Letters E/HL on gray background, Geay rounded logo" width="auto"
+               alt="logo, Personal brand Logo, Letters E/HL on gray background, Geay rounded logo, Elisa Honorato" width="auto"
                height="30"> </a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
