--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li class="list" data-filter="illustration">Ilustración</li>
             <li class="list" data-filter="animation">Animación</li>
          </ul>
-         <div class="product" id="projects" />
+         <div class="product" id="projects"></div>
       </section>
       <section id="contact">
          <header class="d-flex align-content-center justify-content-center">
