--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="description" content="Portafolio Elisa Honorato">
+   <meta name="description" content="Elisa Honorato">
+   <meta name="keywords" content="Elisa Honorato">
    <meta name="description" content="Elisa Honorato, estudiante de diseño UC.">
    <meta name="keywords"
       content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Elisa Horonato, Elisa Honorto, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design">
@@ -137,7 +138,7 @@
                         </svg>
                         <strong>Behance</strong>
                      </span>
-                     <a href="https://www.behance.net/elisahonor1cc1" target="_blank" rel="noopener">Elisa Honorato</a>
+                     <a href="https://www.behance.net/elisahonoratolira" target="_blank" rel="noopener">Elisa Honorato</a>
                   </address>
                   <address class="d-flex justify-content-between align-items-center border-bottom border-dark">
                      <span>
