--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
    <link href="assets/css/style.css" rel="stylesheet" />
+   <link rel="canonical" href="https://elisahonoratolira.cl/#hello" />
    <title>Elisa Honorato</title>
    <link rel="shortcut icon" href="assets/images/automarca/automarca03.png">
    <!-- Google Tag Manager -->
