--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <meta name="keywords" content="Elisa Honorato">
    <meta name="description" content="Elisa Honorato, estudiante de diseño UC.">
    <meta name="keywords"
-      content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Elisa Horonato, Elisa Honorto, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design">
+      content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Elisa Horonato, Elisa Honorto, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design, Programación Creativa">
    <meta property="og:url" content="https://www.elisahonoratolira.cl">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"
       integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA=="
@@ -48,7 +48,7 @@
    <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom shadow-sm" id="principal">
       <div class="container">
          <a href="#hello"> <img src="assets/images/automarca/logo.png"
-               alt="logo, Personal brand Logo, Letters E/HL on gray background, Geay rounded logo" width="auto"
+               alt="logo, Personal brand Logo, Letters E/HL on gray background, Geay rounded logo, Elisa Honorato" width="auto"
                height="30"> </a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
