--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
    <meta name="description" content="Elisa Honorato, estudiante de diseño UC.">
    <meta name="keywords"
       content="Elisa Honorato, Elisa Honorato Lira, Diseño, Museo Miras, Chile, Diseño UC, Elisa Honorato Portafolio, Elisa Horonato, Elisa Honorto, Diseño Web, Diseño Digital, Programación, Pontificia Universidad Católica de Chile, Graphic Design, Digital Design, Programación Creativa">
+   <meta name="google-site-verification" content="mxZoJbyoyWm_kAzRqz03cUXXhc3XIR98olX_Z5g0qNM" />
    <meta property="og:url" content="https://www.elisahonoratolira.cl">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"
       integrity="sha512-rKFvwjvE4liWPlFnvH4ZhRDfNZ9FOpdkD/BU5gAIA3VS3vOQrQ5BjKgbO3kxebKhHdHcNUHLqxQYSoxee9UwgA=="
